webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: java-service
spec:
  ports:
    - port: 8080
  selector:
    app: java
    tier: middleware
  type: LoadBalancer

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-deployment
spec:
  selector:
    matchLabels:
      app: java
      tier: middleware
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: java
        tier: middleware
    spec:
      containers:
      - image: csporg/webapp:master
        name: java-container
        ports:
        - containerPort: 8080
